# PairMap2

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
local/gufe_stub/: pyproject.toml
local/gufe_stub/gufe/: __init__.py
pairmap2/: __init__.py  graph_builder.py  intermediate_generator.py  intermediate_graph.py  intermediate_search.py  ligand_preparation.py  map_generator.py  mcs_utils.py  mol_identity.py  path_solver.py  pipeline.py  score_cache.py  score_engine.py  timer.py  types.py
tests/: conftest.py  test_regression.py  test_units.py
web/backend/: config.py  executor.py  job_store.py  main.py  map_store.py  map_worker.py  models.py  pair_cache.py  utils.py  worker.py
web/backend/engine/: __init__.py  base.py  default.py  v2.py
web/backend/routes/: jobs.py  map.py  pair.py
web/frontend/: index.html
web/frontend/css/: style.css
web/frontend/examples/: p38_example.sdf
web/frontend/js/: common.js  map.js  pair.js
