[project]
name = "pairmap2"
version = "0.2.0"
description = "PairMap2 — high-speed FEP intermediate insertion tool with web UI"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "lomap2 @ git+https://github.com/OpenFreeEnergy/Lomap@v3.0.1",
    "networkx>=3.0",
    "numpy>=1.24",
    "rdkit>=2023.3",
    "tqdm>=4.65",
    "pandas>=2.0",
    "gufe",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.5",
    "openbabel-wheel>=3.1.1",
]

[tool.uv.sources]
gufe = { path = "local/gufe_stub" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pairmap2"]
